--- a/UT02_P2/pom.xml
+++ b/UT02_P2/pom.xml
@@ -8,5 +8,16 @@
     <artifactId>UT02_P2</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.8.1</version>
+        </dependency>
+
+    </dependencies>
+
 
 </project>
